# cmsis_nn_rs

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
cmake/toolchain/: arm-none-eabi-gcc.cmake  armclang.cmake
doc/: index.html
examples/: data.rs  minist_example.rs  mlp_example.rs  mnist_forecast_model.tflite  tflite_loader.rs
examples/minst/: minst_quantized.pth  mod.rs  model.rs
examples/sine/: sine.quant.onnx
src/: activation.rs  backend.rs  basic.rs  bridge.rs  concatenation.rs  convolution.rs  lib.rs  pad.rs  pooling.rs  reshape.rs  softmax.rs  tensor.rs  test_data.rs
src/convolution/: convolve_1_x_n.rs  convolve_1x1.rs  mod.rs
src/fully_connected/: batch_matmul.rs  mod.rs  vector_sum.rs
src/ops/: activations.rs  base.rs  bool_tensor.rs  int_tensor.rs  mod.rs  module.rs  qtensor.rs  tensor.rs
src/tflite_adapter/: mod.rs  subgraph.rs  tensor.rs  traits.rs
src/tflite_adapter/operator/: conv2d.rs  fully_connect.rs  max_pooling.rs  mod.rs  softmax.rs
tests/: test_arm_avg_pool_s8.rs  test_ndarray.rs  test_quantize_add.rs
tests/data/: avgpooling.rs
tests/utils/: utils.rs
