[package]
name = "cmsis-nn-rs"
description = "Bindings to the CMSIS NN library for ARM Cortex-M processors"
version = "0.1.0"
authors = ["Chang Xu <xuxchang@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
harness = false

[dependencies]
defmt = "0.3.10"
fixed = "1.28.0"

[build-dependencies]
bindgen = "0.71.1"
git2 = "0.20.0"
cmake = "0.1"
which = "7.0.1"

[dev-dependencies]
defmt-test = "0.3.2"
defmt-rtt = "0.4.1"
defmt = "0.3.8"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
embedded-alloc = "0.6.0"
cortex-m-rt = "0.7.5"
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"

[target.thumbv7em-none-eabihf.dev-dependencies.nrf52833-hal]
version = "0.18.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

