[package]
name = "cmsis-nn-rs"
description = "Bindings to the CMSIS NN library for ARM Cortex-M processors"
version = "0.2.1"
authors = ["Chang Xu <xuxchang@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/XxChang/cmsis_nn_rs"
keywords = ["cmsis-nn", "nn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
harness = false

[dependencies]
defmt = { version = "1.0.1", optional = true }
micromath = "2.1.0"
flatbuffers = { version = "25.2.10", default-features = false, optional = true }
thiserror = { version = "2.0.12", default-features = false }
ndarray = { version = "0.16.0", default-features = false, optional = true }
libm = "0.2.11"

[build-dependencies]
embuild = { version = "0.33.0", features = ["git", "cmake"]}
which = "7.0.3"
flatc-rust = "0.2.0"

[dev-dependencies]
defmt-test = "0.4.0"
defmt-rtt = "1.0.0"
defmt = "1.0.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
embedded-alloc = "0.6.0"
cortex-m-rt = "0.7.5"
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"

[features]
default = ["tflite"]
defmt = ["dep:defmt"]
tflite = ["dep:flatbuffers", "dep:ndarray"]

[target.thumbv7em-none-eabihf.dev-dependencies.nrf52833-hal]
version = "0.18.0"

[target.thumbv7m-none-eabi.dev-dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", "rt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
